增加安全距离过滤

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
       <td></td>
       <td></td>
       <td></td>
-      <td></td>
+      <td>
+        <label for="c_distance">安全距离（155）</label>
+        <input type="checkbox" id="c_distance" value="true">
+      </td>
       <td></td>
     </tr>
   </tbody>
