add/fix characters,add new sort by date,change way of spider to fetch all character's json

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <table class="table table-striped table-bordered">
   <tbody class="mlk_list">
     <tr class="tr_title tr_firm">
+      <th class="success" title="从大到小排序" value="url">id/日期<span class="caret"></span></th>
       <th class="success" title="从大到小排序" value="img">图鉴<span class="caret"></span></th>
       <th class="success" title="从大到小排序" value="name">角色名<span class="caret"></span></th>
       <th class="success" title="从大到小排序" value="star">稀有度<span class="caret"></span></th>
